--- a/client/css/style.css
+++ b/client/css/style.css
@@ -70,7 +70,7 @@ chatbox {
     height: calc(100% - 80px - 32px - 48px);
     text-align:left;
     margin:8px 8px;
-    padding:12px;
+    padding:12px 12px;
     box-sizing: border-box;
     border: 4px solid #999;
     border-radius: 4px;
@@ -86,7 +86,7 @@ listbox {
     height: calc(100% - 80px - 32px - 48px);
     text-align:left;
     margin:8px 8px;
-    padding:12px;
+    padding:12px 12px;
     box-sizing: border-box;
     border: 4px solid #999;
     border-radius: 4px;
